# revnets

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: build.yml
examples/: config.yaml  config_mnist2d.yaml
revnets/data/: .random.py.swp  __init__.py  arbitrary_correlated_features.py  base.py  correlated_features.py  mnist.py  mnist1d.py  output_supervision.py  random.py  split.py  utils.py
revnets/evaluations/: __init__.py  attack.py  attack_model.py  base.py  evaluation.py  outputs.py  outputs_test.py  outputs_train.py  outputs_val.py  weights.py
revnets/evaluations/attack/: __init__.py  attack.py  attack_model.py
revnets/evaluations/outputs/: test.py  val.py
revnets/evaluations/weights/: __init__.py  layers_mae.py  max_ae.py  mse.py  named_layers_mae.py  visualizer.py  weights.py
revnets/experiments/: __init__.py  activations_analysis.py  analysis.py  data_requirements.py  data_requirements_runner.py  experiment.py  results_visualization.py  sampling_analysis.py  weights_analysis.py
revnets/experiments/analysis/: __init__.py  activations.py  input_data.py  iterative_sampling.py  results.py  trained_networks.py  weights.py
revnets/main/: __init__.py  experiment.py  main.py
revnets/main/experiments/: __init__.py  data_requirements.py  experiment.py
revnets/networks/: __init__.py  base.py  mediumnet.py  mediumnet_20.py  mediumnet_untrained.py  mininet.py  mininet_untrained.py  train.py
revnets/networks/mediumnet/: __init__.py  mediumnet.py  mediumnet_untrained.py
revnets/networks/mediumnet_images/: mediumnet.py  mediumnet_small.py
revnets/networks/mininet/: __init__.py  mininet.py  mininet_bigger_reconstruction.py  mininet_untrained.py
revnets/networks/mininet_images/: __init__.py  mininet_100.py  mininet_128.py  mininet_200.py
revnets/networks/models/: __init__.py  base.py  mediumnet.py  mediumnet_images.py  metrics.py  mininet.py  mininet_images.py  trainable.py
revnets/reconstructions/: __init__.py  base.py  cheat.py  empty.py  retrain.py  retrain_on_outputs.py  retrain_on_outputs_with_bigger_net.py
revnets/reconstructions/outputs_supervision/: __init__.py  advanced_model.py  arbitrary_correlated_features.py  base.py  bigger_net.py  bigger_net_random_inputs.py  finegrained.py  iterative_sampling.py  iterative_sampling_analysis.py  learning_rate_scheduler.py  metrics.py  model.py  random_inputs.py  smaller_weight_variance.py  synthetic_inputs.py
revnets/test_utils/: test_utils.py
revnets/utils/: __init__.py  args.py  batch_size.py  colors.py  config.py  launcher.py  logger.py  path.py  pl_logger.py  progress_bar.py  rank.py  runner.py  table.py  trainer.py
src/revnets/cli/: entry_point.py  launch.py
src/revnets/context/: __init__.py  config.py  context.py  experiment.py  options.py
src/revnets/data/: __init__.py  arbitrary_correlated_features.py  base.py  correlated_features.py  mnist.py  mnist1d.py  output_supervision.py  random.py  split.py  utils.py
src/revnets/evaluations/: __init__.py  base.py  evaluate.py  evaluation.py
src/revnets/experiments/: __init__.py  data_requirements.py  experiment.py  results_visualization.py
src/revnets/launching/: experiment.py  lauch_plan.py  main.py
src/revnets/main/: main.py
src/revnets/models/: __init__.py  config.py  experiment.py  internal_connection.py  internal_neurons.py  options.py  path.py  phase.py  secrets_.py  split.py
src/revnets/networks/: __init__.py  base.py  mediumnet.py  mediumnet_images.py  mininet.py  mininet_images.py  rnn.py  train.py
src/revnets/pipelines/: __init__.py  base.py  rnn.py  train.py
tests/: conftest.py  test_align.py  test_align_tanh.py  test_cli_entry_point.py  test_cli_entry_points.py  test_data.py  test_evaluations.py  test_main.py  test_pipelines.py  test_reconstructions.py  test_standardize.py  test_standardize_tanh.py  utils.py
tests/evaluations/: test_align.py  test_evaluations.py  test_standardize.py  test_standardize_order.py  test_standardize_scale.py  test_utils.py  verifier.py
(+217 files in other folders)
