[project]
name = "revnets"
version = "0.0.1"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}, {name="Judah Goldfeder", email="jag2396@columbia.edu"}]
description = "Reverse engineering neural network weights"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adversarial-robustness-toolbox",
    "kneed",
    "matplotlib",
    "pytorch-lightning",
    "quinten-cli",
    "retry",
    "scikit-learn",
    "superpathlib",
    "tensorboard",
    "torch",
    "torchvision",
    "torchtoolbox",
    "torchmetrics",
    "transformers",
    "torchtext",
    "wandb"
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/revnets"

[project.optional-dependencies]
dev = [
    "pre-commit"
]
test = [
    "hypothesis",
    "pytest"
]

[project.scripts]
revnets = "revnets:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "UP", # pyupgrade
]
fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
