[project]
name = "revnets"
version = "0.1.0"
description = "Reverse engineer internal parameters of black box neural networks"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}, {name="Judah Goldfeder", email="jag2396@columbia.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adversarial-robustness-toolbox >=1.17.1, <2",
    "cacher @ git+https://github.com/quintenroets/cacher",
    "kneed >=0.8.5, <1",
    "matplotlib >=3.8.2, <4",
    "numpy >=1.26.4, <2",
    "package-utils[context] >=0.6.5, <1",
    "powercli >=0.2.1, <1",
    "pytorch-lightning >=2.2.1, <3",
    "retry >=0.9.2, <1",
    "scikit-learn >=1.4.1, <2",
    "scipy >=1.11.4, <2",
    "simple-classproperty >=4.0.2, <5",
    "superpathlib >=2.0.2, <3",
    "torch >=2.2.2, <3",
    "torchvision >=0.17.2, <1",
    "torchtoolbox >=0.1.8.2, <1",
    "torchtext >=0.17.2, <1",
]


[project.optional-dependencies]
dev = [
    "hypothesis >= 6.97.1",
    "package-dev-tools >=0.5.11, <1",
    "package-dev-utils >=0.1.6, <1",
    "types-request >=2, <3",
]
[project.urls]
"Source Code" = "https://github.com/quintenroets/revnets"

[project.scripts]
revnets = "revnets.cli.entry_point:entry_point"
launch_revnets = "revnets.cli.launch:entry_point"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest"

[tool.coverage.report]
precision = 4
fail_under = 60

[tool.mypy]
strict = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "art.*",
    "kneed.*",
    "scipy.*",
    "sklearn.*",
    "torchvision.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]
addopts = "-p no:warnings"


[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.package-data]
revnets = ["py.typed"]
