[metadata]
name = revnets
version = 0.0.1
author=Judah Goldfeder & Quinten Roets
author_email="qdr2104@columbia.edu"
description = Reverse engineering neural network weights
url = https://github.com/quintenroets/revnets
license = MIT

[options]
packages = find:
include_package_data = True
package_dir =
    = .
install_requires =
    adversarial-robustness-toolbox
    kneed
    matplotlib
    pytorch-lightning
    quinten-cli
    retry
    scikit-learn
    superpathlib
    tensorboard
    torch
    torchvision
    torchtoolbox
    torchmetrics
    transformers
    torchtext
    wandb

[options.entry_points]
console_scripts =
    revnets = revnets:main

[options.packages.find]
where = .

[bdist_wheel]
universal = true
